fix: typos in documentation

--- a/docs/workshop/lab1_introduction.adoc
+++ b/docs/workshop/lab1_introduction.adoc
@@ -301,7 +301,7 @@ Put the explanatory comment just above it:
 # The timeout delay is defined by number of seconds
 {{{ bash_instantiate_variables("var_accounts_tmout") }}}
 
-# if 0, no occurence of tmout found, if 1, occurence found
+# if 0, no occurrence of tmout found, if 1, occurrence found
 tmout_found=0
 
 for f in /etc/profile /etc/profile.d/*.sh; do
